src/lib/testcases/fails/basic/struct_bad_field_type/main.rk
struct Foo
  toto :: Int64
  titi :: Float64

main =
  let lol =
    Foo
      toto: 10.2
      titi: 10.2

  lol.toto
